--- a/src/welcome.html
+++ b/src/welcome.html
@@ -9,20 +9,20 @@
     <body>
         <header class="header">
             <figure>
-                <img src="./img/studio_ghibli_logo.png" height="100" alt="">
+                <img src="./img/studio_ghibli_logo.png" alt="">
             </figure>
-            <nav class="menu">
-                <ol>
-                    <li>
-                        <a href="#">Collection</a>
+            <nav class="nav">
+                <ul class="nav-menu">
+                    <li class="nav-menu-item">
+                        <a href="#" class="nav-menu-link">Collection</a>
                     </li>
-                    <li>
-                        <a href="#">Characters</a>
+                    <li class="nav-menu-item">
+                        <a href="#" class="nav-menu-link">Characters</a>
                     </li>
-                    <li>
-                        <a href="#">Locations</a>
+                    <li class="nav-menu-item">
+                        <a href="#" class="nav-menu-link">Locations</a>
                     </li>
-                </ol>
+                </ul>
             </nav>
         </header>
         <main class="container">
