--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Lovers HOLA GINA SOY NATALIA</title>
+    <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/2d09545b84.js" crossorigin="anonymous"></script>
   </head>
@@ -40,7 +40,7 @@
         <form action="">
           <select name="" id="best-films-list" class="best-films-list">
             <option value="Filter by director">--Filter by director--</option>
-            <option value="Hayao Miyazaki" id="direct1">Hayao Miyazaki</option>
+            <option value="Hayao Miyazaki">Hayao Miyazaki</option>
             <option value="Isao Takahata">Isao Takahata </option>
             <option value="Yoshifumi Kondō">Yoshifumi Kondō</option>
             <option value="Hiroyuki Morita">Hiroyuki Morita </option>
