fordenpor año de pelicula

--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,13 @@
           </select>
           <select name="" id="list-order" class="list-order">
             <option value="0">--Order by years--</option>
-            <option value="1">Upward</option>
-            <option value="2">Falling</option>
+            <option value="1" id="upward">Upward</option>
+            <option value="2" id="falling">Falling</option>
           </select>
         </form>
       </div>
       <div id="container-animes"></div>
+      <div id="orden"></div>
       </main>
       <div id="root">Aquí irán los filtrados</div>
     <script src="main.js" type="module"></script>
