--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
       </div>
       <div id="container-animes"></div>
       </main>
-      <div id="root">Aquí irán los filtrados</div>
+      <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
   <footer>
