codigo ha sido  ordenado , funcion de  filter y ordenado terminado-falta ordenar en cualquier data no solo datafilms

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,8 @@
           </select>
           <select name="" id="list-order" class="list-order">
             <option value="0">--Order by years--</option>
-            <option value="1" id="upward">Upward</option>
-            <option value="2" id="falling">Falling</option>
+            <option value="upward" id="upward">Upward</option>
+            <option value="falling" id="falling">Falling</option>
           </select>
         </form>
       </div>
