--- a/src/welcome.html
+++ b/src/welcome.html
@@ -5,38 +5,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Data Lovers</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="media.css">
     </head>
     <body>
         <header class="header">
-            <figure>
-                <img src="./img/studio_ghibli_logo.png" alt="">
-            </figure>
             <nav class="nav">
+                <figure class="logo">
+                    <img src="./img/studio_ghibli_logo.png" alt="">
+                </figure>
                 <ul class="nav-menu">
-                    <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link">Collection</a>
+                    <li class="active">
+                        <a href="#list">Collection </a>
                     </li>
-                    <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link">Characters</a>
+                    <li>
+                        <a href="#">Characters</a>
                     </li>
-                    <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link">Locations</a>
+                    <li>
+                        <a href="#">Locations</a>
                     </li>
                 </ul>
+                <span class="btn-menu">
+                    <i class="fas fa-bars"></i>
+                </span>
             </nav>
         </header>
         <main class="container">
             <div class="welcome-main">
                 <div class="text">
-                    <div class="text-one">
-                        <p>Studio Ghibli (ス タ ジ オ ジ ブ リ) is a Japanese animation studio, considered by specialized critics and many moviegoers as one of the best animation studios in the world today.​</p>
+                    <h1>WELCOME TO STUDIO GHIBLI</h1><br>
+                    <span>Studio Ghibli (ス タ ジ オ ジ ブ リ) is a Japanese animation studio, considered by specialized critics and many moviegoers as one of the best animation studios in the world today.​<br><br>
+                        Here you can find the films of your preference and their details.</span>
+                    <div class="button">
+                        <a href="index.html">Ingresar</a>
                     </div>
-                    <div class= text-two>
-                        <p>Here you can find the films of your preference and their details.</p>
-                    </div>
-                </div>
-                <div class="button">
-                    <a href="index.html">Ingresar</a>
                 </div>
             </div>
         </main>
