--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </header>
     <main class="home-main">
       <div class="search">
-        <input type="search" name="search" placeholder="Search movie titles">
+        <input type="search"  class="search" name="search" placeholder="Search movie titles">
       </div>
       <div class="list-title" id="list">
         <p>List studio Ghibli</p>
