--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
   </body>
   <footer>
     <div class="footer-text">
-        <p>© 2021 Todos los derechos reservados</p>
+        <p>© 2021 Made by Gina & Nina</p>
     </div>
 </footer>
 </html>
