agregue animacion fondo celeste

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,10 @@
       </nav>
     </header>
     <main class="home-main">
+      <div id="animaciones" > 
+        <img src="./img/animacion1.gif" alt="">
+                
+       </div>
       <div class="search">
         <input type="text" name="search" id="search" placeholder="Search movie titles">
         <button class="button"id="btn">Buscar</button>
@@ -40,6 +44,8 @@
       </div>
       <div class="list-title" id="list">
         <p>List studio Ghibli</p>
+      
+
       </div>
       <div class="filter">
         <form action="">
