cambie nombre clase de boton y css

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -35,7 +35,7 @@
                     <h1>WELCOME TO STUDIO GHIBLI</h1><br>
                     <span>Studio Ghibli (ス タ ジ オ ジ ブ リ) is a Japanese animation studio, considered by specialized critics and many moviegoers as one of the best animation studios in the world today.​<br><br>
                         Here you can find the films of your preference and their details.</span>
-                    <div class="button">
+                    <div class="button-welcome">
                         <a href="index.html">Ingresar</a>
                     </div>
                 </div>
