--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
             <a href="#list">Collection </a>
           </li>
           <li>
-            <a href="#">Characters</a>
+            <a id="personajes" href="#">Characters</a>
           </li>
           <li>
-            <a href="#">Locations</a>
+            <a id="locaciones" href="#">Locations</a>
           </li>
         </ul>
         <span class="btn-menu">
@@ -64,6 +64,7 @@
       </div>
       <div id="container-animes"></div>
       <div id="orden"></div>
+      <div id="container-personajes"></div>
       </main>
       <div id="root"></div>
     <script src="main.js" type="module"></script>
