--- a/src/index.html
+++ b/src/index.html
@@ -65,11 +65,9 @@
       <div id="container-animes"></div>
       <div id="orden"></div>
       <div id="container-personajes"></div>
+      <div id="root"></div>
       </main>
       
-      <button id="botonVerMas" >Personajes</button>
-      <div id="modalPersonajes"></div>
-
       <script src="https://kit.fontawesome.com/a07f6fa05e.js" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
   </body>
