ordanamiento y resolucion de conflictos nueva Rama 2

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         </figure>
         <ul class="nav-menu">
           <li class="active">
-            <a href="#home">Collection </a>
+            <a href="./index.html">Collection </a>
           </li>
           <li>
             <a id="personajes" href="#">Characters</a>
@@ -63,35 +63,9 @@
             </select>
           </div>
         </div>
-      <div class="search">
-        <input type="text" name="search" id="search" placeholder="Search movie titles">
-        <button class="button"id="btn">Buscar</button>
-        <div id="mensaje-error" class="mensaje-error">Enter text in the movie search engine.</div>
-      </div>
-      <div class="list-title" id="list">
-        <p>List studio Ghibli</p>
-      </div>
-      <div class="filter">
-        <form action="">
-          <select name="" id="best-films-list" class="best-films-list" >
-            <option disabled selected>--Filter by director--</option>
-            <option value="Hayao Miyazaki" id="direct1">Hayao Miyazaki</option>
-            <option value="Isao Takahata" id="direct2">Isao Takahata </option>
-            <option value="Yoshifumi Kondō">Yoshifumi Kondō</option>
-            <option value="Hiroyuki Morita">Hiroyuki Morita </option>
-            <option value="Gorō Miyazaki">Gorō Miyazaki </option>
-            <option value="Hiromasa Yonebayashi">Hiromasa Yonebayashi</option>
-          </select>
-          <select name="" id="list-order" class="list-order">
-            <option disabled selected>--Order by years--</option>
-            <option value="upward" id="upward">Upward</option>
-            <option value="falling" id="falling">Falling</option>
-          </select>
-        </form>
-      </div>
- 
-      <div class="container-collection" id="container-animes"></div>
-    </section>
+        <div class="container-collection" id="container-animes"></div>
+
+     </section>
       
       <section>
         <div id="container-personajes"></div>
