css card de personajes

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
         </figure>
         <ul class="nav-menu">
           <li class="active">
-            <a href="#home">Collection </a>
+            <a href="index.html">Collection</a>
           </li>
           <li>
-            <a id="personajes" href="#">Characters</a>
+            <a id="personajes" href="#characters">Characters</a>
           </li>
           <li>
             <a id="locaciones" href="#">Locations</a>
@@ -66,14 +66,15 @@
         <div class="container-collection" id="container-animes"></div>
       </section>
       <section>
-        <div id="container-personajes"></div>
-      </section>
-      <section>
         <div id="orden"></div>
       </section>
       <div id="root"></div>
+      <section class="characters" id="characters">
+        <div class="menu" id="menu"></div>
+        <div class="container-characters" id="container-characters"></div>
+      </section>
     </main>
-    <div id="modalPersonajes"></div>
+    <section id="modalPersonajes"></section>
     <script src="https://kit.fontawesome.com/a07f6fa05e.js" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
   </body>
