--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
       </nav>
     </header>
     <main class="home-main">
+
+      <!-- SECCION COLLECTION -->
       <section class="home" id="home">
         <!--<div id="animaciones" >
           <img src="./img/animacion1.gif" alt="">
@@ -69,10 +71,13 @@
         <div id="orden"></div>
       </section>
       <div id="root"></div>
+
+      <!-- SECCION CHARACTERS -->
       <section class="characters" id="characters">
         <div class="menu" id="menu"></div>
         <div class="container-characters" id="container-characters"></div>
       </section>
+
     </main>
     <section id="modalPersonajes"></section>
     <script src="https://kit.fontawesome.com/a07f6fa05e.js" crossorigin="anonymous"></script>
