--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <a id="personajes" href="#">Characters</a>
           </li>
           <li>
-            <a id="locaciones" href="#">Locations</a>
+            <a id="locaciones" href="#">Ranking</a>
           </li>
         </ul>
         <span class="btn-menu">
