--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,38 @@
           </div>
         </div>
         <div class="container-collection" id="container-animes"></div>
-        <div id="orden"></div>
+        <div id="orden">
+          <div class="container">
+            <ul class="tabs">
+              <li class="active" data-target="panel-1">
+                CHARACTERES
+              </li>
+              <li data-target="panel-2">
+                LOCATIONS
+              </li>
+              <li data-target="panel-3">
+                VEHICLES
+              </li>
+            </ul>
+            <div class="tabs-content">
+              <div class="tabs-panel active" id="panel-1">
+                <p>
+                  VER PERSONAJES
+                </p>
+              </div>
+              <div class="tabs-panel" id="panel-2">
+                <p>
+                  VER LOCACIONES
+                </p>
+              </div>
+              <div class="tabs-panel" id="panel-3">
+                <p>
+                  VER VEHICLES
+                </p>
+              </div>
+            </div>
+          </div>
+
         <div id="root"></div>
       </section>
 
