--- a/src/index.html
+++ b/src/index.html
@@ -65,14 +65,14 @@
             </div>
             <div class="search">
               <input type="text" name="search" id="search" placeholder="Search movie titles">
-              <button class="button"id="btn">Buscar</button>
-              <div id="mensaje-error" class="mensaje-error">Enter text in the movie search engine.</div>
+              <input type="button" class="button"  id="btn" value="Buscar"> 
+              <div id="mensaje-error" class="mensaje-error">Enter text in the movie search engine </div>
             </div>
           </div>
         </div>
         <div class="container-collection" id="container-animes"></div>
         <div id="orden">
-
+        </div>
         <div id="root"></div>
       </section>
     </main>
@@ -127,7 +127,7 @@
         <div class="containerModal">
           <div class="image">
             <figure>
-              <img class="pictureMovie"></img>
+              <img  class="pictureMovie"> 
             </figure>
           </div>
             <div class="modalDetails">
@@ -195,10 +195,12 @@
              
     <script src="https://kit.fontawesome.com/a07f6fa05e.js" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
+
   </body>
+
   <footer>
     <div class="footer-text">
-        <p>© 2021 Made by Gina & Nina</p>
+        <p>© 2021 Made by Gina &#38 Nina</p>
     </div>
 </footer>
 </html>
