--- a/src/welcome.html
+++ b/src/welcome.html
@@ -45,7 +45,9 @@
     </body>
     <footer>
         <div class="footer-text">
-            <p>© 2021 Made by Gina & Nina</p>
+            <p>
+             © 2021 Made by Gina  &#38  Nina
+            </p>
         </div>
     </footer>
 </html>
