cambios recogidos y algunas modificaciones

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
         </span>
         <ul class="nav-menu show">
           <li class="nav-list">
-            <a href="index.html" class="nav-link">Collection</a>
+            <a id="animes" href="index.html" class="nav-link" id="show-collection">Collection</a>
           </li>
           <li class="nav-list">
-            <a id="personajes" href="#characters" class="nav-link">Characters</a>
+            <a id="personajes" href="#characters-main" class="nav-link" id="show-characters">Characters</a>
           </li>
           <li class="nav-list">
             <a id="locaciones" href="#" class="nav-link">Ranking</a>
@@ -32,7 +32,7 @@
         </ul>
       </nav>
     </header>
-    <main class="home-main" id="">
+    <main class="home-main" id="home-main">
 
       <!-- SECCION COLLECTION -->
       <section class="home" id="home">
