--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@
             <a id="personajes" href="#characters" class="nav-link">Characters</a>
           </li>
           <li class="nav-list">
-            <a id="locaciones" href="#" class="nav-link">Ranking</a>
+            <a id="ranking" href="#grafics" class="nav-link">Ranking</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main class="home-main" id="">
+    <main class="home-main" >
 
       <!-- SECCION COLLECTION -->
       <section class="home" id="home">
@@ -41,7 +41,7 @@
         </div>-->
         <div class="containerMenuBar">
           <div class="list-title" id="list">
-            <p>List studio Ghibli</p>
+            <p id="list">List studio Ghibli</p>
           </div>
           <div class="menuBar">
             <div class="filter-movie">
@@ -184,7 +184,7 @@
 
     </section>
     
-    <section id="grafics" >
+    <section id="grafics" style="display: none;">
       <canvas id="myChart" width="400" height="400">
 
       </canvas>
