css y otras modificaciones

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -46,7 +46,7 @@
     <footer>
         <div class="footer-text">
             <p>
-             © 2021 Made by Gina  &#38  Nina
+            © 2021 By Gina  &#38  Nina
             </p>
         </div>
     </footer>
