--- a/src/index.html
+++ b/src/index.html
@@ -185,15 +185,15 @@
     </section>
     
     <section id="grafics" style="display: none;">
-        <p>
-        <strong>
-          <span> the highest grossing movies of studio ghibli</span>
-        </strong>
-        </p>
+        <div id="graficsSpan">
+         <span > the highest grossing movies of studio ghibli</span>
+       
+      </div>
 
-        <p>
-          On June 15, 1985, four visionary Japanese artists decided to pull the blanket over their heads and break away from the big animation studios to create something new, a new way of making movies and telling stories. They were Hayao Miyazaki, Isao Takahata, Toshio Suzuki and Yasuyoshi Tokuma, the founders of the
-        </p>
+
+        <div class="graficsDiv">
+          On June 15, 1985, four visionary Japanese artists decided to pull the blanket over their heads and break away from the big animation studios to create something new, a new way of making movies and telling stories. They were Hayao Miyazaki, Isao Takahata, Toshio Suzuki and Yasuyoshi Tokuma, the founders of the from the dream factory called Studios Ghibli. <br><br><br> Next we show you the highest grossing films according to the rating of their fans
+        </div>
 
       <canvas id="myChart" width="400" height="400">
 
