--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
           <img src="./img/animacion1.gif" alt="">
         </div>-->
         <div class="containerMenuBar">
-          <div class="list-title" >
+          <div class="list-title" id="list">
             <p id="list">List studio Ghibli</p>
           </div>
           <div class="menuBar">
